fix for dark theme text color and spacing in demo component

--- a/apps/angular-test-app/src/app/components/toaster-demo/toaster-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/toaster-demo/toaster-demo.component.scss
@@ -1,7 +1,7 @@
 $uxg-toolbar-height: 56px;
 
-uxg-toaster-container {
-    padding-top: $uxg-toolbar-height;
+.uxg-toaster-overlay {
+    margin-top: $uxg-toolbar-height;
 }
 
 .demo-component {
